# niu

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: endian.h  image.h  utils.h
src/: image.cpp  main.cpp
